--- a/workmanager.html
+++ b/workmanager.html
@@ -35,7 +35,9 @@ An Example:
 
 <h3 id='introduction'>Introduction</h3>
 <br>
-In this blog I'm going to show you how to work with WorkManager in Android<br><br><br>
+In this blog I'm going to show you how to work with WorkManager in Android. We will be doing two examples one with 
+OneTimeWorkRequest and another with PeriodicWorkRequest. 
+<br><br><br>
 
 
 <h3 id='what-is-workmanager'>What is a WorkManager?</h3>
@@ -73,6 +75,7 @@ If you want the task to be exceuted at some specific time, then in that case, Wo
 <br>
 There are four basic components of WorkManager you need to know:
 <br>
+<br>
 <ul>
 <li><b>Worker:</b><br><br>
 Worker is an abstract class that performs work synchronously on a background thread provided by WorkManager. You will need to make a custom class and extends the Worker Class and override the doWork() method where actual background processing takes place.
@@ -108,7 +111,7 @@ Now, Let's dive into the code. We will build the simple Notification App which c
      <div style="flex:1;padding-right:5px;">
           <img class="img-fluid text-center" src = "http://127.0.0.1:8000/media/blog/22/demo.png">
      </div>
-     <div style="flex:4;padding-left:5px;">
+     <div style="flex:1;padding-left:5px;">
           <img class="img-fluid text-center" src = "http://127.0.0.1:8000/media/blog/22/demo.png" >
      </div>
 </div>
@@ -203,7 +206,10 @@ In this step, set the OnClickListener on first button in the layout.
 <br><br>
 In this step, build the Constraints object using Constraints.Builder() inside the onClick() method.<br>
 Constraints object is basically a set of conditions or a condition which needs to 
-be fulfilled before the WorkRequest can run. In this case, we are specifying two Constraints, First one 
+be fulfilled before the WorkRequest can run. For more information on the set of constraints refer <a href="https://developer.android.com/reference/androidx/work/Constraints.Builder" target="_blank" rel="nofollow">here</a>.
+
+
+In this case, we are specifying two Constraints, First one 
 it does not requires charging to run the WorkRequest and the second one is, App needs to be connected 
 to any network in order to run the WorkRequest.
 <br><br>
@@ -237,11 +243,11 @@ In this step, set the OnClickListener on second button in the layout.
 </li>
 <li><b>Specifying Constraints : </b>
 <br><br>
-In this step, build the Constraints object using Constraints.Builder() inside the onClick() method.<br>
-Constraints object is basically a set of conditions or a condition which needs to 
-be fulfilled before the WorkRequest can run. In this case, we are specifying two Constraints, First one 
-it does not requires charging to run the WorkRequest and the second one is, App needs to be connected 
-to any network in order to run the WorkRequest.
+The constraints are exactly the same here as with the OneTimeWorkRequest. 
+The phone must be charging and must be connected to a network. 
+ 
+
+
 <br><br>
 <script src="https://gist.github.com/mohak1283/6b6b17e9d6a6b7f4a669a8ffefa66921.js"></script>
 </li>
